--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="refine | Build your React-based CRUD applications, without constraints."
+      content="congressinfo.net"
     />
     <meta
       data-rh="true"
@@ -20,7 +20,7 @@
       content="https://refine.dev/img/refine_social.png"
     />
     <title>
-      Refine - Build your React-based CRUD applications, without constraints.
+      congressinfo.net
     </title>
   </head>
   <body>
